flapivor/tests/tests-m3/hopix/typechecker/bad/if.hopix
val test : int =
  if true then 0 else true